Improved initial default settings
The default time format, date format, timezone offset, and DST
settings now default to the computer on which you compile this
firmware.  Also automatic dimming is enabled by default, if that when
that feature is available.  Display pulsing during alarm and snooze is
now also enabled by default.

This commit also fixes a bug which caused the automatic fall DST
correction in the European Union to happen an hour ahead of schedule.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -57,8 +57,13 @@ all: $(addprefix $(PROJECT),.elf _flash.hex _eeprom.hex _fuse.hex _lock.hex)
 $(PROJECT).elf: $(OBJECTS)
 	$(AVRCPP) $(AVRCPPFLAGS) -o $@ $^
 
-# make time.o using system time the default clock time
+# make time.o using system time settings for defaults
 time.o: time.c $(UTILSCRIPT)
+	./$(UTILSCRIPT) time | xargs $(AVRCPP) -c $(AVRCPPFLAGS) -o $@ $<
+	./$(UTILSCRIPT) time | xargs $(AVRCPP) -MM $(AVRCPPFLAGS) $< > $*.d
+
+# make gps.o using system time settings for defaults
+gps.o: gps.c $(UTILSCRIPT)
 	./$(UTILSCRIPT) time | xargs $(AVRCPP) -c $(AVRCPPFLAGS) -o $@ $<
 	./$(UTILSCRIPT) time | xargs $(AVRCPP) -MM $(AVRCPPFLAGS) $< > $*.d
 
